# Embedded16-AVRFirmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
cmake/: generic-gcc-avr.cmake
libatomthreads/: CMakeLists.txt
src/: CMakeLists.txt  constants.h  debugshell.cpp  debugshell.hpp  dumpcode.c  dumpcode.h  errno-base.h  errno.h  eth01d.cpp  eth01d.hpp  i2c.c  i2c.h  l298.cpp  l298.hpp  main.cpp  outputdrv.cpp  outputdrv.hpp  sensordrv.cpp  sensordrv.hpp  sht10.cpp  sht10.hpp  spidrv.cpp  spidrv.hpp  system_tick.c  system_tick.h  tsl2561.cpp  tsl2561.hpp  uart.c  uart.h  usbpwr.cpp  usbpwr.hpp  util.c  util.h  watersens.cpp  watersens.hpp
